# 3PcParlayNFL-

./: README.md  app.py  pyproject.toml  requirements.txt
nfl_prop_predictor/: cli.py  data_models.py  features.py  init.py  predict.py  serve.py  test_shapes.py  train.py  utils.py
scripts/: build_datasets.py
