[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-prop-predictor"
version = "0.1.0"
description = "NFL prop predictor using ML + opponent defensive ratings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "pydantic>=2.4",
  "typer>=0.12",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "scipy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]
